<resources>
    <string name="app_name">FinalApplication</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>

    <string name="txt_login">Login</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="txt_registrar">Registrar</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="pais">País</string>
    <string name="btn_voltar">Voltar</string>

    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_soma">+</string>
    <string name="btn_divisao">/</string>
    <string name="btn_subtracao">-</string>
    <string name="btn_multiplicacao">*</string>
    <string name="btn_apagar">C</string>
    <string name="btn_igual">=</string>
    <string name="btn_virgula">,</string>

    <string name="btn_ap">C</string>
    <string name="btn_ligar">Ligar</string>
    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_0">0</string>
    <string name="btn_a">*</string>
    <string name="btn_hashtag">#</string>
    <string name="btn_calc">CALCULAR</string>

</resources>
